--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,8 +5,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lasagna</title>
     </head>
-    
+
     <body>
         <h1>Lasagna</h1>
+        <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg"
+             alt="Picture of lasagna">
+
+        <h3>Description</h3>
+        <p>When John Chandler submitted this lasagna recipe to Allrecipes more 
+            than 20 years ago, he had no idea how successful it would become. 
+            One of our top-performing recipes of all time, World's Best Lasagna 
+            racks up more than 7 million views per year and has ranked among the 
+            most popular lasagna recipes on the internet for two decades. 
+            Unfortunately, John unexpectedly passed away at 53 years old — 
+            read all about his life and legacy here.</p>
+        <p>Make our most popular lasagna today to find out what all the fuss is about!</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>Garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
