--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/beef-noodle-soup.html">Beef Noodle Soup</a></li>
+            <li><a href="./recipes/mapo-tofu.html">Mapo Tofu</a></li>
+        </ul>
     </body>
 </html>
