--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/beef-noodle-soup.html">Beef Noodle Soup</a></li>
-            <li><a href="./recipes/mapo-tofu.html">Mapo Tofu</a></li>
-        </ul>
+        <h1 class="title">My Favorite Recipes</h1>
+        <div class="recipe-link">
+            <a href="./recipes/lasagna.html">Lasagna</a>
+        </div>
+        <div class="recipe-link">
+            <a href="./recipes/beef-noodle-soup.html">Beef Noodle Soup</a>
+        </div>
+        <div class="recipe-link">
+            <a href="./recipes/mapo-tofu.html">Mapo Tofu</a>
+        </div>
     </body>
 </html>
